src/tests/error/refs.sibs
:wrap();
:se%lf:prod;
:self:bu@ild($mode);
:self: :build(dev, prod);
:selyyf::build(dev, prod);
:self:bui=ld(dev, $p#rod);
:self:build(dev, $pro=d);
:self:build:;